--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -4,14 +4,14 @@ body {
 }
 .firstSection{
   background-image: url("./../../public/newbgimage.png");
-  background-repeat: no-repeat;
-  background-size: 1350px;
+  background-size: 100%;
   height: 700px;
 }
 .firstSectionBtn{
   width: 200px;
   font-size: larger;
-  margin-top: 400px;
+  
+  margin-bottom: -400px;
 
 }
 a {
@@ -203,6 +203,36 @@ table th {
   border: 2px solid #ff7a00;
   border-radius: 20px;
   height: 100px;
+}
+.nautrition-title{
+  text-align: center;
+
+}
+.nautrition{
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 40px;  
+}
+.nautrition ul{
+  background-color: rgb(120, 183, 250);
+  border-radius: 20px;
+
+}
+.nautrition-meal{
+  background-color: #c1c1c1;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
+  font-size: xx-large;
+  height: 80px;
+  box-shadow: black;
+}
+.nautrition button{
+  margin-left: -1px;
+  margin-top: -40px;
+  background-color: rgb(112, 152, 255);
+  border-radius: 20px;
 }
 .LoginPage {
   background-image: url("./../../public/bgimage.jpg");
